# kajet-turbo

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  Dockerfile.caddy  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 02f8185212ce_add_events_table.py  14932fd60df2_dangling_links_table.py  313b4b5a2917_note_chunks_index_meta_and_note_index_.py  3a964dbee749_add_tags.py  3b7429883579_chunk_level_notes_fts_and_drop_fts_rowid.py  4152c194c063_add_ssh_keys_table.py  43b1f3bd8f6f_workspace_meta_settings_column.py  455c19802af8_add_jobs_table.py  4598c1375d03_add_workspace_remotes_table.py  5fffaf57055c_embedding_cache_and_user_embedding_.py  6bb594d4a5d5_scope_active_workspaces_by_mcp_session.py  (+8 more)
frontend/: .prettierignore  eslint.config.js  orval.config.ts  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
scripts/: analyze-logs.py  bench.py  bench_report.py  export_openapi.py  generate-api.sh  locustfile.py  locustfile_multi.py  migrate.sh
tests/: conftest.py  test_api_workspaces.py  test_auth.py  test_bench_report.py  test_cache.py  test_chunking.py  test_concurrency.py  test_concurrency_stress.py  test_dependencies_indexer.py  test_export_openapi.py  test_get_required_user.py  test_git_ops.py  test_git_repository.py  test_log.py  test_maintenance.py  test_note_edit.py  test_perf.py  test_push_enqueue_wiring.py  test_server.py  test_services.py  test_storage.py  test_tags.py  test_wikilinks.py  test_worker.py  test_workspace.py  test_workspace_settings.py
(+357 files in other folders)
